# arcadiaforge

./: .env.example  .gitignore  LICENSE  README.md  environment.yaml  mcp_config.json  pyproject.toml  pytest.ini  run_backend.py  start_web.py
arcadiaforge/: __init__.py  __main__.py  agent.py  artifact_store.py  audit.py  autonomy.py  capabilities.py  capability_tools.py  check_deps.py  checkpoint.py  client.py  config.py  debug.py  decision.py  decision_tools.py  error_context.py  escalation.py  evidence_tools.py  failure_analysis.py  feature_list.py  feature_tools.py  file_ops.py  file_tools.py  human_interface.py  hypotheses.py  hypothesis_tools.py  image_tools.py  intervention_learning.py  live_terminal.py  memory_tools.py  messaging_tools.py  metrics.py  native_screenshot.py  observability.py  orchestrator.py  output.py  platform_utils.py  process_tools.py  process_tracker.py  progress.py  (+11 more)
docs/: AUDIT_SUMMARY.md  DATABASE_MIGRATION_PLAN.md  IMPLEMENTATION_PLAN.md
examples/: app_spec_business_knowledge_engine.txt  app_spec_calculator.txt  app_spec_openfoam.txt  app_spec_piano_tuner.txt  app_spec_snippetbox.txt  demo_live_terminal.py
tests/: test_agent_tools_integration.py  test_artifact_store.py  test_autonomy.py  test_checkpoint.py  test_db_integration.py  test_decision.py  test_error_context.py  test_escalation.py  test_evidence_tools.py  test_failure_analysis.py  test_feature_tools.py  test_file_ops.py  test_human_interface.py  test_hypotheses.py  test_intervention_learning.py  test_mcp_tools_unit.py  test_memory.py  test_memory_db.py  test_metrics.py  (+10 more)
(+57 files in other folders)
